--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "hardhat-hackathon-boilerplate",
+  "name": "dao-hacks",
   "version": "1.0.0",
-  "description": "A boilerplate repository to get you started with Hardhat and Ethereum development",
+  "description": "A decentralized application that allows transfer of funds using NFTs for the purpose of grants for projects within the organization for University projects",
   "directories": {
     "test": "test"
   },
@@ -10,19 +10,19 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/nomiclabs/hardhat-hackathon-boilerplate.git"
+    "url": "git+https://github.com/UniversityDAO/dao-hacks.git"
   },
   "keywords": [
     "hardhat",
     "ethereum",
     "hackathon"
   ],
-  "author": "Nomic Labs",
+  "author": "UniversityDAO",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/nomiclabs/hardhat-hackathon-boilerplate/issues"
+    "url": "https://github.com/UniversityDAO/dao-hacks/issues"
   },
-  "homepage": "https://github.com/nomiclabs/hardhat-hackathon-boilerplate#readme",
+  "homepage": "https://github.com/UniversityDAO/dao-hack#readme",
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.2",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
@@ -31,5 +31,8 @@
     "ethers": "^5.0.0",
     "hardhat": "^2.3.0",
     "husky": "^4.2.5"
+  },
+  "dependencies": {
+    "@openzeppelin/contracts": "^4.5.0"
   }
 }
